tests/method/missing_args.rev
struct Foo {
    fn method(a: int, b: int) {}
}

Foo().method(1) // error: wrong arguments number, expected 2 but found 1